# fastapi-microservice-template

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  note.md  pyproject.toml  requirements.txt
docs/: api.md  architecture.md  deployment.md  development.md  testing.md
docs/adr/: 0001-use-cqrs-pattern.md  0002-choice-of-database.md  0003-api-versioning-strategy.md
scripts/: generate_project_structure.py
