[tool.poetry]
name = "fastapi-microservice"
version = "0.1.0"
description = "A FastAPI Microservice Template"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
sqlalchemy = "^1.4.23"
alembic = "^1.7.1"
psycopg2-binary = "^2.9.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
redis = "^3.5.3"
kafka-python = "^2.0.2"
sentry-sdk = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true